# tsunami

./: .gitignore  .gitleaksignore  .spelling  Makefile  README.md  omen_markets.json  omen_trades.json  pyproject.toml  run_agent.sh  run_service.sh  sample.env  stop_service.sh  tox.ini
.github/workflows/: main_workflow.yml
mints/: mints.json
scripts/: __init__.py  aea-config-replace.py  check_dependencies.py  ipfs_pin.py  omen_markets.py  test_prompts.py  test_suno.py
